--- a/src/OperationsApp/src/app/app.component.html
+++ b/src/OperationsApp/src/app/app.component.html
@@ -37,7 +37,7 @@
             Teams Movement 
           </a>
         </li>
-        <li *ngIf='HasPermission("Accounts")'>
+        <li *ngIf='HasPermission("Account")'>
           <a routerLink="/account" class="nav-link text-white" routerLinkActive="active">
             <svg class="bi me-2" width="16" height="16"></svg>
             Accounts
